compile-direct/tests/failing/1-rune-literal-above-unicode/main.af
rune: @rune

accept: (value: rune) {
    @exit(0)
}

main: () {
    accept(1114112)
}
